--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "ts-node --project tsconfig.server.json server.ts",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "NODE_ENV=production node dist/server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -21,6 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "socketio": "^1.0.0",
+    "ts-node": "^10.9.2",
+    "sharp": "^0.33.5",
     "ws": "^8.17.0"
   },
   "devDependencies": {
