--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "dev": "ts-node --project tsconfig.server.json server.ts",
     "build": "next build && tsc --project tsconfig.server.json",
-    "start": "NODE_ENV=production node dist/server.js",
+    "start": "NODE_ENV=production node out/server.js",
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
@@ -20,9 +21,12 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.5",
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.7.5",
     "socketio": "^1.0.0",
     "ts-node": "^10.9.2",
-    "sharp": "^0.33.5",
+    "uuid": "^10.0.0",
     "ws": "^8.17.0"
   },
   "devDependencies": {
@@ -30,7 +34,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/socket.io": "^3.0.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
