--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.26.1",
     "sharp": "^0.33.5",
     "socket.io": "^4.6.2",
     "socket.io-client": "^4.7.5",
