--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "crypto": "^1.0.1",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
+    "howler": "^2.2.4",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "os": "^0.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.26.1",
