--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "socketio": "^1.0.0",
     "ts-node": "^10.9.2",
     "uuid": "^10.0.0",
-    "ws": "^8.17.0"
+    "ws": "^8.17.0",
+    "youtube-dl-exec": "^3.0.24"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
